Topic Update and Delete Routes Added
